# sdl23drenderingthing

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/geometry/: geometry.cpp  geometry.hpp
src/utils/: utils.cpp  utils.hpp
